force-app/main/default/objects/SK_ACH_Distribution_Line__c/SK_ACH_Distribution_Line__c.object-meta.xml
<CustomObject>
    <label>Distribution Line</label>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>