force-app/main/default/objects/SK_ACH_Distribution_Line__c/fields/SK_ACH_1099_Issued__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_1099_Issued__c</fullName>
    <label>1099 Issued</label>
    <description>Whether 1099 has been issued</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>