force-app/main/default/objects/SK_ACH_Distribution_Line__c/fields/SK_ACH_Commitment__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Commitment__c</fullName>
    <label>Commitment</label>
    <description>Investor commitment (for LP distributions)</description>
    <type>Lookup</type>
    <referenceTo>SK_ACH_Commitment__c</referenceTo>
    <relationshipLabel>Distribution Lines</relationshipLabel>
    <relationshipName>Distribution_Lines</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>