force-app/main/default/objects/SK_ACH_Distribution_Line__c/fields/SK_ACH_Distribution__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Distribution__c</fullName>
    <label>Distribution</label>
    <description>Parent Distribution</description>
    <type>MasterDetail</type>
    <referenceTo>SK_ACH_Distribution__c</referenceTo>
    <relationshipLabel>Distribution Lines</relationshipLabel>
    <relationshipName>Distribution_Lines</relationshipName>
</CustomField>