force-app/main/default/objects/SK_ACH_Distribution_Line__c/fields/SK_ACH_Distribution_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Distribution_Line_Amount__c</fullName>
    <label>Amount</label>
    <description>Amount distributed to this recipient</description>
    <required>true</required>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>