force-app/main/default/objects/SK_ACH_Distribution_Line__c/fields/SK_ACH_Distribution_Line_Notes__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Distribution_Line_Notes__c</fullName>
    <description>Payment notes</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>