force-app/main/default/objects/SK_ACH_Distribution_Line__c/fields/SK_ACH_Distribution_Line_Status__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Distribution_Line_Status__c</fullName>
    <description>Payment status</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>