force-app/main/default/objects/SK_ACH_Distribution_Line__c/fields/SK_ACH_Line_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Line_Payment_Reference__c</fullName>
    <label>Payment Reference</label>
    <description>Transaction ID or check number</description>
    <type>Text</type>
    <length>255</length>
</CustomField>