force-app/main/default/objects/SK_ACH_Distribution_Line__c/fields/SK_ACH_Line_Preferred_Return__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Line_Preferred_Return__c</fullName>
    <description>Portion that is preferred return</description>
    <label>Preferred Return</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>