force-app/main/default/objects/SK_ACH_Distribution_Line__c/fields/SK_ACH_Line_Profit_Distribution__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Line_Profit_Distribution__c</fullName>
    <description>Portion that is profit distribution</description>
    <label>Profit Distribution</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>