force-app/main/default/objects/SK_ACH_Distribution_Line__c/fields/SK_ACH_Line_Return_of_Capital__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Line_Return_of_Capital__c</fullName>
    <label>Return of Capital</label>
    <description>Portion that is return of capital</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>