force-app/main/default/objects/SK_ACH_Distribution_Line__c/fields/SK_ACH_Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Recipient_Type__c</fullName>
    <label>Recipient Type</label>
    <description>Who receives this distribution</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LP</fullName>
                <default>true</default>
                <label>LP</label>
            </value>
            <value>
                <fullName>GP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>